Added loaded files names list

--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -1,1 +1,6 @@
-<p>images-grouping works!</p>
+<h2>Preload images</h2>
+<input #file type="file" accept='image/*' (change)="processFiles(file.files)" multiple/>
+<p>File names:</p>
+<div *ngFor="let fileName of fileNames">
+  <span>{{ fileName }}</span><br/>
+</div>
