--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -1,6 +1,6 @@
 <h2>Preload images</h2>
 <input #file type="file" accept='image/*' (change)="processFiles(file.files)" multiple/>
-<p>File names:</p>
-<div *ngFor="let fileName of fileNames">
-  <span>{{ fileName }}</span><br/>
+<p>Files:</p>
+<div *ngFor="let file of files">
+  <span>{{ file.name }}, {{ file.dateTime| date:'yyyy-MM-dd HH:mm' }}</span><br/>
 </div>
