--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -1,6 +1,6 @@
 <h2>Preload images</h2>
 <input #file type="file" accept='image/*' (change)="processFiles(file.files)" multiple/>
 <p>Files:</p>
-<div *ngFor="let file of files">
-  <span>{{ file.name }}, {{ file.dateTime| date:'yyyy-MM-dd HH:mm' }}</span><br/>
+<div *ngFor="let seq of filesSequence">
+  <span>{{ seq.seqNo }}, {{ seq.file.name }}, {{ seq.file.dateTime| date:'yyyy-MM-dd HH:mm' }}, {{ seq.timeDiff }} </span><br/>
 </div>
