--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -1,6 +1,10 @@
-<h2>Preload images</h2>
+<h2>Grouping Images</h2>
 <input #file type="file" accept='image/*' (change)="processFiles(file.files)" multiple/>
-<p>Files:</p>
-<div *ngFor="let seq of filesSequence">
-  <span>{{ seq.seqNo }}, {{ seq.file.name }}, {{ seq.file.dateTime| date:'yyyy-MM-dd HH:mm' }}, {{ seq.timeDiff }}, {{ seq.isDuplicate }} </span><br/>
+<p *ngIf="files.length > 0">{{files.length}} files in total</p>
+<p *ngIf="totalFilesCount > 0">{{totalFilesCount}} files without duplicates in {{filesGroups.length}} groups</p>
+<div *ngFor="let group of filesGroups">
+  <div><b>{{ group.startTime | date:'yyyy-MM-dd HH:mm EEEE' }} - {{group.files.length}} files</b></div>
+  <div *ngFor="let file of group.files">
+  <div>{{ file.name }} </div>
+  </div>
 </div>
