--- a/src/app/images-grouping/images-grouping.component.scss
+++ b/src/app/images-grouping/images-grouping.component.scss
@@ -11,3 +11,9 @@
 .img {
   max-width: 150px;
 }
+
+.img-duplicate {
+  // border: 5px solid red;
+  // filter: grayscale(100%);
+  max-width: 50px;
+}
