--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -1,9 +1,21 @@
 <h2>Grouping Images</h2>
 <input #file type="file" accept='image/*' (change)="processFiles(file.files)" multiple/>
 <p *ngIf="files.length > 0">{{files.length}} files in total</p>
-<p *ngIf="totalFilesCount > 0">{{totalFilesCount}} files without duplicates in {{filesGroups.length}} groups</p>
+<p *ngIf="uniqueFilesCount > 0">{{uniqueFilesCount}} files without duplicates in {{filesGroups.length}} groups</p>
+
+<table *ngIf="filesGroups.length > 0">
+  <th>Group</th>
+  <th>Files</th>
+  <th>Days</th>
+  <tr *ngFor="let group of filesGroups">
+    <td>{{ group.name }}</td>
+    <td>{{ group.getCountWithoutDuplicates() }}</td>
+    <td>{{ getDaysDiffFromToday(group.startTime) }}</td>
+  </tr>
+</table>
+<p></p>
 <div *ngFor="let group of filesGroups">
-  <div><b>{{ group.startTime | date:'yyyy-MM-dd HH:mm EEEE' }} - {{group.getCountWithoutDuplicates()}} unique files (of {{group.sequence.length}})</b></div>
+  <div><b>{{ group.name }} - {{ group.getCountWithoutDuplicates() }} unique files (of {{ group.sequence.length }})</b></div>
   <div class="group">
     <div class="file" *ngFor="let seq of group.sequence">
       {{ seq.file.dateTime | date:'HH:mm:ss' }}<br/>
