--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -1,7 +1,7 @@
 <h2>Grouping Images</h2>
 <input #file type="file" accept='image/*' (change)="processFiles(file.files)" multiple/>
 <p *ngIf="files.length > 0">{{files.length}} files in total</p>
-<p *ngIf="uniqueFilesCount > 0">{{uniqueFilesCount}} files without duplicates in {{filesGroups.length}} groups</p>
+<p *ngIf="getUniqueFilesCount() > 0">{{getUniqueFilesCount()}} files without duplicates in {{filesGroups.length}} groups</p>
 
 <table *ngIf="filesGroups.length > 0">
   <th>Group</th>
