google photos upload file working

--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -24,3 +24,5 @@
     </div>
   </div>
 </div>
+<button (click)="getUploadToken()">Get upload token</button>
+<button (click)="uploadFile()">Upload file</button>
