access token variable removed, CSS for images changed, (nenasdíleno) added to group name

--- a/src/app/images-grouping/images-grouping.component.scss
+++ b/src/app/images-grouping/images-grouping.component.scss
@@ -13,13 +13,12 @@
 }
 
 .img {
-  max-width: 150px;
+  max-width: 250px;
 }
 
 .img-duplicate {
-  // border: 5px solid red;
-  // filter: grayscale(100%);
-  max-width: 50px;
+  filter: grayscale(100%);
+  max-width: 250px;
 }
 
 table {
