--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -7,7 +7,8 @@
   <input id="accessToken" type="text" formControlName="accessToken"/>
 </form>
 <input #file type="file" accept='image/*' (change)="processFiles(file.files)" multiple/>
-<p *ngIf="mediaItems.length > 0">{{mediaItems.length}} files in total</p>
+<p *ngIf="filesCount > 0">{{mediaItems.length}} of {{filesCount}} files processed</p>
+<p *ngIf="filesLoaded"><button (click)="createGroups()" [disabled]="groupsCreated">Create groups</button></p>
 <p *ngIf="getUniqueMediaItemsCount() > 0">{{getUniqueMediaItemsCount()}} files without duplicates in {{mediaItemsGroups.length}} groups</p>
 
 <table *ngIf="mediaItemsGroups.length > 0">
@@ -24,8 +25,8 @@
     <td>{{ group.albumId }}</td>
   </tr>
 </table>
-<p><button (click)="createAlbums()">Create albums</button></p>
-<p><button (click)="createMedia()">Upload files</button></p>
+<p *ngIf="mediaItemsGroups.length > 0"><button (click)="createAlbums()">Create albums</button></p>
+<p *ngIf="mediaItemsGroups.length > 0"><button (click)="createMedia()">Upload files</button></p>
 <p></p>
 <div *ngFor="let group of mediaItemsGroups">
   <div><b>{{ group.name }} - {{ group.getCountWithoutDuplicates() }} unique files (of {{ group.mediaItemsForGrouping.length }})</b></div>
