--- a/src/app/images-grouping/images-grouping.component.scss
+++ b/src/app/images-grouping/images-grouping.component.scss
@@ -5,7 +5,6 @@
 
 .file {
   text-align: center;
-  margin: 10px;
 }
 
 .img, .img-duplicate {
@@ -16,21 +15,10 @@
   filter: grayscale(100%);
 }
 
-table {
-  border-collapse: collapse;
-}
-
-td, th {
-  border: 1px solid lightgrey;
-  padding: 5px;
-}
-
-th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-}
-
 .my-width {
-  max-width: 400px
+  max-width: 800px
+}
+
+.my-width-groups {
+  max-width: 800px
 }
