--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -37,9 +37,10 @@
   <div class="my-width-groups mx-auto">
     <div *ngFor="let group of mediaItemsGroups" class="card border p-3 mb-2">
       <div class="card-header">
-        {{ group.name }} - {{ group.getCountWithoutDuplicates() }} unique files
-        (of {{ group.mediaItemsForGrouping.length }})
+        <h5 #groupName contenteditable (blur)="updateGroupName(group, groupName.textContent)">{{ group.name }}</h5>
+        <div>{{ group.getCountWithoutDuplicates() }} unique files (of {{ group.mediaItemsForGrouping.length }})</div>
       </div>
+
       <div class="card-body group">
         <div class="file p-3 mb-2" *ngFor="let item of group.mediaItemsForGrouping">
           {{ item.mediaItem.dateTime | date: "HH:mm:ss" }}<br />
@@ -67,7 +68,7 @@
     <th>Days</th>
     <th>Album</th>
     <tr *ngFor="let group of mediaItemsGroups">
-      <td #groupName contenteditable (blur)="updateGroupName(group, groupName.textContent)">
+      <td>
         {{ group.name }}
       </td>
       <td>{{ group.getCountWithoutDuplicates() }}</td>
