--- a/src/app/images-grouping/images-grouping.component.html
+++ b/src/app/images-grouping/images-grouping.component.html
@@ -1,4 +1,4 @@
-<h2 class="my-width mx-auto">Grouping Images</h2>
+<h2 class="my-width mx-auto">Grouping and resizing images for uploading to Google Photos</h2>
 
 <form [formGroup]="inputFilesForm">
   <div class="form-group my-width mx-auto">
@@ -78,6 +78,8 @@
       <td>{{ group.albumId ? 'CREATED' : 'not created' }}</td>
     </tr>
   </table>
+
+  <h3 class="my-width mx-auto">Upload to Google Photos</h3>
 
   <div class="card p-3 mb-2 bg-light text-dark my-width mx-auto">
     <div class="card-body">
