--- a/src/app/images-grouping/images-grouping.component.scss
+++ b/src/app/images-grouping/images-grouping.component.scss
@@ -7,12 +7,16 @@
   text-align: center;
 }
 
-.img, .img-duplicate {
+.img {
   max-width: 200px;
 }
 
 .img-duplicate {
   filter: grayscale(100%);
+}
+
+.large-img {
+  max-width: 100%;
 }
 
 .my-width {
