--- a/src/app/images-grouping/images-grouping.component.scss
+++ b/src/app/images-grouping/images-grouping.component.scss
@@ -7,12 +7,8 @@
   text-align: center;
 }
 
-.img {
+.small-img {
   max-width: 200px;
-}
-
-.img-duplicate {
-  filter: grayscale(100%);
 }
 
 .large-img {
